// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar reducers execute action 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 2`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [
    Object {
      "callback": [MockFunction],
      "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    },
  ],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 3`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 4`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;
